--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -14,13 +14,30 @@
         android:layout_height="60dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_num_of_time"
+        <LinearLayout
             android:layout_width="0dp"
+            android:layout_weight="6"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="6"
-            android:text="No timeLocation set" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_location_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue"
+                android:textStyle="bold"
+                android:text="No timeLocation set" />
+
+            <TextView
+                android:id="@+id/tv_num_of_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No timeLocation set" />
+
+        </LinearLayout>
+
+
 
         <Button
             android:id="@+id/btn_set_time"
