--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#efefef"
-    tools:context="com.creative.timesetter.MainActivity">
+    tools:context="com.morydes.rideshare.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
