--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,15 +6,42 @@
     tools:context="com.morydes.rideshare.MainActivity">
 
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+
+
+
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adview_banner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/banner_test_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
+
 
     <fragment
         android:id="@+id/map"
-        android:layout_below="@+id/toolbar"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/adview_banner"
+        android:layout_below="@+id/toolbar" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
+
+        <CheckBox
+            android:id="@+id/ch_only_today"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Only today" />
+    </LinearLayout>
 
 </RelativeLayout>
