--- a/app/src/main/res/layout/dialog_set_reminder_2.xml
+++ b/app/src/main/res/layout/dialog_set_reminder_2.xml
@@ -35,15 +35,29 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="Set Reminder"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_sub_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="*We aim to improve your chances of picking up a rider but we can't guarantee it.*"
+            android:textColor="@color/black"
+            android:layout_below="@+id/tv_header"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:textSize="15sp"/>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_header"
-            android:layout_marginTop="40dp"
+            android:layout_below="@+id/tv_sub_header"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:orientation="vertical">
@@ -56,7 +70,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="4"
                     android:layout_height="wrap_content"
                     android:text="Rideshare : "
                     android:textColor="@color/black"
@@ -64,7 +79,8 @@
 
                 <TextView
                     android:id="@+id/tv_rideshare"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="6"
                     android:layout_height="wrap_content"
                     android:text="Uber"
                     android:textColor="@color/blue"
@@ -80,7 +96,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="4"
                     android:layout_height="wrap_content"
                     android:text="Seats : "
                     android:textColor="@color/black"
@@ -88,7 +105,8 @@
 
                 <TextView
                     android:id="@+id/tv_seats"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="6"
                     android:layout_height="wrap_content"
                     android:text="4 Seats"
                     android:textColor="@color/blue"
