--- a/app/src/main/res/layout/dialog_premium_user_alert.xml
+++ b/app/src/main/res/layout/dialog_premium_user_alert.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:text="Set Time"
+            android:text="Alert"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -45,12 +46,16 @@
             android:layout_below="@+id/tv_header"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:orientation="vertical">
 
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="asdjlk asdj lakdjadjjdl asjdlsd jasj jsdkl sjadldjdjsdsaj"/>
+               android:textColor="@color/black"
+               android:gravity="center"
+               android:textSize="18sp"
+               android:text="You already set a pin. If you want to set unlimited pin please subscribe it for $1.99 monthly."/>
 
         </LinearLayout>
 
