--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/action_share"
         android:icon="@drawable/ic_settings_white"
-        android:title="Share"
+        android:title="Share app"
         app:showAsAction="collapseActionView" />
 
 
